Fix loading buttons on mobile

--- a/src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
+++ b/src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
@@ -148,7 +148,10 @@
     width: 100%;
 
     button {
-      min-width: unset;
+      &:first-child,
+      &:last-child {
+        min-width: unset;
+      }
     }
   }
 }
